--- a/MapReduce/Assignment-4.ipynb
+++ b/MapReduce/Assignment-4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
     "reload(sys)\n",
     "sys.setdefaultencoding('utf-8') # required to convert to unicode\n",
     "\n",
-    "stop_words = read_stopwords('stop_words_en.txt')\n",
+    "stop_words = read_stopwords('/datasets/stop_words_en.txt')\n",
     "\n",
     "for line in sys.stdin:\n",
     "    try:\n",
@@ -37,19 +37,20 @@
     "    for word in words:\n",
     "        word = word.strip()\n",
     "        if word and len(word) > 1 and word.isalpha():\n",
-    "            if word.lower() in stop_words:\n",
+    "            word = word.lower();\n",
+    "            if word in stop_words:\n",
     "                continue\n",
-    "            wordList = list(word.lower())\n",
-    "            wordset = set(wordList)\n",
-    "            if len(wordset) > 1:\n",
-    "                wordList.sort()\n",
-    "                print (\"%s\\t%s\\t%d\" % (''.join(wordList), word.lower(), 1))\n",
+    "            letterList = list(word)\n",
+    "            letterList.sort()\n",
+    "            #letterSet = set(letterList)\n",
+    "            if len(set(letterList)) > 1:\n",
+    "                print (\"%s,%s\\t%d\" % (''.join(letterList), word, 1))\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -68,12 +69,11 @@
     "current_anagram = None\n",
     "current_word = None\n",
     "word_count = 0\n",
-    "a_count = 0\n",
-    "\n",
     "\n",
     "for line in sys.stdin:\n",
     "    try:\n",
-    "        anagram, word, count = line.strip().split('\\t', 2)\n",
+    "        a_w, count = line.strip().split('\\t', 1)\n",
+    "        anagram, word = a_w.split(',', 1)\n",
     "        count = int(count)\n",
     "    except ValueError as e:\n",
     "        continue\n",
@@ -82,18 +82,18 @@
     "    else:\n",
     "        if current_anagram:\n",
     "            if current_word:\n",
-    "                print (\"%s\\t%s\\t%d\" % (current_anagram, current_word, word_count))\n",
+    "                print (\"%s,%s\\t%d\" % (current_anagram, current_word, word_count))\n",
     "        word_count = count\n",
     "        current_anagram = anagram\n",
     "        current_word = word\n",
     "\n",
     "if current_anagram and current_word:\n",
-    "    print (\"%s\\t%s\\t%d\" % (current_anagram, current_word, word_count))"
+    "    print (\"%s,%s\\t%d\" % (current_anagram, current_word, word_count))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -112,166 +112,266 @@
     "current_anagram = None\n",
     "current_word = None\n",
     "total_count = 0\n",
-    "word_count = 0\n",
     "word_list = []\n",
     "\n",
     "\n",
     "for line in sys.stdin:\n",
     "    try:\n",
-    "        anagram, word, count = line.strip().split('\\t', 2)\n",
+    "        a_w, count = line.strip().split('\\t', 1)\n",
+    "        anagram, word = a_w.split(',', 1)\n",
     "        count = int(count)\n",
     "    except ValueError as e:\n",
     "        continue\n",
-    "    #print(\"--- %s\\t%s\\t%d\" % (anagram, word, count))\n",
-    "    #print(\"*** %s\\t%s\" % (current_anagram, current_word))\n",
     "    if current_anagram and current_anagram == anagram and current_word == word:\n",
     "        total_count += count\n",
     "        continue\n",
     "    if current_anagram and current_anagram == anagram:\n",
     "        word_list.append(word)\n",
-    "        #print(','.join(word_list))w\n",
     "        total_count += count    \n",
-    "        word_count += 1\n",
     "        current_word = word\n",
-    "    else:\n",
-    "        if current_anagram:\n",
-    "            if current_word and word_count > 1:  \n",
-    "                word_set = set(word_list) \n",
-    "                if len(word_set):\n",
-    "                    word_list = list(word_set)\n",
-    "                    word_list.sort()\n",
-    "                    print (\"%d\\t%d\\t%s\" % (total_count, len(word_list), ','.join(word_list)))\n",
-    "        word_count = 1\n",
-    "        total_count = count\n",
-    "        word_list = []\n",
-    "        word_list.append(word)\n",
-    "        current_anagram = anagram\n",
-    "        current_word = word\n",
+    "        continue\n",
+    "    if current_anagram:\n",
+    "        if current_word:  \n",
+    "            word_set = set(word_list) \n",
+    "            if len(word_set) > 1:\n",
+    "                word_list = list(word_set)\n",
+    "                word_list.sort()\n",
+    "                print (\"%d\\t%d\\t%s\" % (total_count, len(word_list), ','.join(word_list)))\n",
+    "    total_count = count\n",
+    "    word_list = [ word ]\n",
+    "    current_anagram = anagram\n",
+    "    current_word = word\n",
     "\n",
     "if current_anagram and current_word:\n",
-    "    word_list.sort()\n",
-    "    print (\"%d\\t%d\\t%s\" % (total_count, word_count, ','.join(word_list)))"
+    "    word_set = set(word_list) \n",
+    "    if len(word_set) > 1:\n",
+    "        word_list = list(word_set)\n",
+    "        word_list.sort()\n",
+    "        print (\"%d\\t%d\\t%s\" % (total_count, en(word_list), ','.join(word_list)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting mapper4b.py\n"
+      "7825\t5\tenglish,helsing,hesling,shengli,shingle\n"
      ]
-    }
-   ],
-   "source": [
-    "%%writefile mapper4b.py\n",
-    "\n",
-    "import sys\n",
-    "import re\n",
-    "\n",
-    "#reload(sys)\n",
-    "#sys.setdefaultencoding('utf-8') # required to convert to unicode\n",
-    "\n",
-    "for line in sys.stdin:\n",
-    "    try:\n",
-    "        total_count, word_count, str = line.strip().split('\\t', 2)\n",
-    "        total_count = int(total_count)\n",
-    "        word_count = int(word_count)\n",
-    "    except ValueError as e:\n",
-    "        continue\n",
-    "    if word_count > 1:\n",
-    "        print (\"%d\\t%d\\t%s\" % (total_count, word_count, str))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found 1 items\r\n",
-      "drwxrwxrwx   - jovyan supergroup          0 2017-10-17 13:15 /data/wiki/en_articles_part\r\n"
+      "rm: `wc_result_1532201367395122': No such file or directory\n",
+      "rm: `anagram_result_1532201367396105': No such file or directory\n",
+      "18/07/21 19:29:35 INFO client.RMProxy: Connecting to ResourceManager at /0.0.0.0:8032\n",
+      "18/07/21 19:29:36 INFO client.RMProxy: Connecting to ResourceManager at /0.0.0.0:8032\n",
+      "18/07/21 19:29:37 INFO mapred.FileInputFormat: Total input files to process : 1\n",
+      "18/07/21 19:29:39 INFO mapreduce.JobSubmitter: number of splits:2\n",
+      "18/07/21 19:29:39 INFO mapreduce.JobSubmitter: Submitting tokens for job: job_1532183761073_0015\n",
+      "18/07/21 19:29:40 INFO impl.YarnClientImpl: Submitted application application_1532183761073_0015\n",
+      "18/07/21 19:29:40 INFO mapreduce.Job: The url to track the job: http://3474399ea4a6:8088/proxy/application_1532183761073_0015/\n",
+      "18/07/21 19:29:40 INFO mapreduce.Job: Running job: job_1532183761073_0015\n",
+      "18/07/21 19:29:52 INFO mapreduce.Job: Job job_1532183761073_0015 running in uber mode : false\n",
+      "18/07/21 19:29:52 INFO mapreduce.Job:  map 0% reduce 0%\n",
+      "18/07/21 19:30:20 INFO mapreduce.Job:  map 1% reduce 0%\n",
+      "18/07/21 19:30:26 INFO mapreduce.Job:  map 12% reduce 0%\n",
+      "18/07/21 19:30:33 INFO mapreduce.Job:  map 21% reduce 0%\n",
+      "18/07/21 19:30:38 INFO mapreduce.Job:  map 31% reduce 0%\n",
+      "18/07/21 19:30:45 INFO mapreduce.Job:  map 40% reduce 0%\n",
+      "18/07/21 19:30:51 INFO mapreduce.Job:  map 49% reduce 0%\n",
+      "18/07/21 19:30:58 INFO mapreduce.Job:  map 56% reduce 0%\n",
+      "18/07/21 19:31:03 INFO mapreduce.Job:  map 61% reduce 0%\n",
+      "18/07/21 19:31:09 INFO mapreduce.Job:  map 66% reduce 0%\n",
+      "18/07/21 19:31:16 INFO mapreduce.Job:  map 78% reduce 0%\n",
+      "18/07/21 19:31:21 INFO mapreduce.Job:  map 100% reduce 0%\n",
+      "18/07/21 19:31:59 INFO mapreduce.Job:  map 100% reduce 42%\n",
+      "18/07/21 19:32:06 INFO mapreduce.Job:  map 100% reduce 63%\n",
+      "18/07/21 19:32:08 INFO mapreduce.Job:  map 100% reduce 67%\n",
+      "18/07/21 19:32:14 INFO mapreduce.Job:  map 100% reduce 87%\n",
+      "18/07/21 19:32:25 INFO mapreduce.Job:  map 100% reduce 89%\n",
+      "18/07/21 19:32:35 INFO mapreduce.Job:  map 100% reduce 93%\n",
+      "18/07/21 19:32:43 INFO mapreduce.Job:  map 100% reduce 97%\n",
+      "18/07/21 19:32:51 INFO mapreduce.Job:  map 100% reduce 98%\n",
+      "18/07/21 19:32:57 INFO mapreduce.Job:  map 100% reduce 99%\n",
+      "18/07/21 19:32:58 INFO mapreduce.Job:  map 100% reduce 100%\n",
+      "18/07/21 19:33:02 INFO mapreduce.Job: Job job_1532183761073_0015 completed successfully\n",
+      "18/07/21 19:33:03 INFO mapreduce.Job: Counters: 50\n",
+      "\tFile System Counters\n",
+      "\t\tFILE: Number of bytes read=242655072\n",
+      "\t\tFILE: Number of bytes written=364761200\n",
+      "\t\tFILE: Number of read operations=0\n",
+      "\t\tFILE: Number of large read operations=0\n",
+      "\t\tFILE: Number of write operations=0\n",
+      "\t\tHDFS: Number of bytes read=76874501\n",
+      "\t\tHDFS: Number of bytes written=5033433\n",
+      "\t\tHDFS: Number of read operations=18\n",
+      "\t\tHDFS: Number of large read operations=0\n",
+      "\t\tHDFS: Number of write operations=8\n",
+      "\tJob Counters \n",
+      "\t\tKilled reduce tasks=1\n",
+      "\t\tLaunched map tasks=2\n",
+      "\t\tLaunched reduce tasks=5\n",
+      "\t\tData-local map tasks=2\n",
+      "\t\tTotal time spent by all maps in occupied slots (ms)=171668\n",
+      "\t\tTotal time spent by all reduces in occupied slots (ms)=304111\n",
+      "\t\tTotal time spent by all map tasks (ms)=171668\n",
+      "\t\tTotal time spent by all reduce tasks (ms)=304111\n",
+      "\t\tTotal vcore-milliseconds taken by all map tasks=171668\n",
+      "\t\tTotal vcore-milliseconds taken by all reduce tasks=304111\n",
+      "\t\tTotal megabyte-milliseconds taken by all map tasks=175788032\n",
+      "\t\tTotal megabyte-milliseconds taken by all reduce tasks=311409664\n",
+      "\tMap-Reduce Framework\n",
+      "\t\tMap input records=4100\n",
+      "\t\tMap output records=6140337\n",
+      "\t\tMap output bytes=109026414\n",
+      "\t\tMap output materialized bytes=121307138\n",
+      "\t\tInput split bytes=228\n",
+      "\t\tCombine input records=0\n",
+      "\t\tCombine output records=0\n",
+      "\t\tReduce input groups=242308\n",
+      "\t\tReduce shuffle bytes=121307138\n",
+      "\t\tReduce input records=6140337\n",
+      "\t\tReduce output records=242308\n",
+      "\t\tSpilled Records=18421011\n",
+      "\t\tShuffled Maps =8\n",
+      "\t\tFailed Shuffles=0\n",
+      "\t\tMerged Map outputs=8\n",
+      "\t\tGC time elapsed (ms)=5437\n",
+      "\t\tCPU time spent (ms)=75330\n",
+      "\t\tPhysical memory (bytes) snapshot=831336448\n",
+      "\t\tVirtual memory (bytes) snapshot=11583102976\n",
+      "\t\tTotal committed heap usage (bytes)=523825152\n",
+      "\tShuffle Errors\n",
+      "\t\tBAD_ID=0\n",
+      "\t\tCONNECTION=0\n",
+      "\t\tIO_ERROR=0\n",
+      "\t\tWRONG_LENGTH=0\n",
+      "\t\tWRONG_MAP=0\n",
+      "\t\tWRONG_REDUCE=0\n",
+      "\tFile Input Format Counters \n",
+      "\t\tBytes Read=76874273\n",
+      "\tFile Output Format Counters \n",
+      "\t\tBytes Written=5033433\n",
+      "18/07/21 19:33:03 INFO streaming.StreamJob: Output directory: wc_result_1532201367395122\n",
+      "18/07/21 19:33:09 INFO client.RMProxy: Connecting to ResourceManager at /0.0.0.0:8032\n",
+      "18/07/21 19:33:09 INFO client.RMProxy: Connecting to ResourceManager at /0.0.0.0:8032\n",
+      "18/07/21 19:33:13 INFO mapred.FileInputFormat: Total input files to process : 4\n",
+      "18/07/21 19:33:14 INFO mapreduce.JobSubmitter: number of splits:4\n",
+      "18/07/21 19:33:15 INFO mapreduce.JobSubmitter: Submitting tokens for job: job_1532183761073_0016\n",
+      "18/07/21 19:33:15 INFO impl.YarnClientImpl: Submitted application application_1532183761073_0016\n",
+      "18/07/21 19:33:16 INFO mapreduce.Job: The url to track the job: http://3474399ea4a6:8088/proxy/application_1532183761073_0016/\n",
+      "18/07/21 19:33:16 INFO mapreduce.Job: Running job: job_1532183761073_0016\n",
+      "18/07/21 19:33:28 INFO mapreduce.Job: Job job_1532183761073_0016 running in uber mode : false\n",
+      "18/07/21 19:33:28 INFO mapreduce.Job:  map 0% reduce 0%\n",
+      "18/07/21 19:35:22 INFO mapreduce.Job:  map 58% reduce 0%\n",
+      "18/07/21 19:35:23 INFO mapreduce.Job: Task Id : attempt_1532183761073_0016_m_000000_0, Status : FAILED\n",
+      "Container killed on request. Exit code is 137\n",
+      "Container exited with a non-zero exit code 137\n",
+      "Killed by external signal\n",
+      "\n",
+      "18/07/21 19:35:25 INFO mapreduce.Job:  map 75% reduce 0%\n",
+      "18/07/21 19:35:35 INFO mapreduce.Job:  map 100% reduce 0%\n",
+      "18/07/21 19:35:38 INFO mapreduce.Job:  map 100% reduce 100%\n",
+      "18/07/21 19:35:41 INFO mapreduce.Job: Job job_1532183761073_0016 completed successfully\n",
+      "18/07/21 19:35:42 INFO mapreduce.Job: Counters: 51\n",
+      "\tFile System Counters\n",
+      "\t\tFILE: Number of bytes read=5518059\n",
+      "\t\tFILE: Number of bytes written=11734686\n",
+      "\t\tFILE: Number of read operations=0\n",
+      "\t\tFILE: Number of large read operations=0\n",
+      "\t\tFILE: Number of write operations=0\n",
+      "\t\tHDFS: Number of bytes read=5033925\n",
+      "\t\tHDFS: Number of bytes written=510822\n",
+      "\t\tHDFS: Number of read operations=15\n",
+      "\t\tHDFS: Number of large read operations=0\n",
+      "\t\tHDFS: Number of write operations=2\n",
+      "\tJob Counters \n",
+      "\t\tFailed map tasks=1\n",
+      "\t\tLaunched map tasks=5\n",
+      "\t\tLaunched reduce tasks=1\n",
+      "\t\tOther local map tasks=3\n",
+      "\t\tData-local map tasks=2\n",
+      "\t\tTotal time spent by all maps in occupied slots (ms)=415420\n",
+      "\t\tTotal time spent by all reduces in occupied slots (ms)=12345\n",
+      "\t\tTotal time spent by all map tasks (ms)=415420\n",
+      "\t\tTotal time spent by all reduce tasks (ms)=12345\n",
+      "\t\tTotal vcore-milliseconds taken by all map tasks=415420\n",
+      "\t\tTotal vcore-milliseconds taken by all reduce tasks=12345\n",
+      "\t\tTotal megabyte-milliseconds taken by all map tasks=425390080\n",
+      "\t\tTotal megabyte-milliseconds taken by all reduce tasks=12641280\n",
+      "\tMap-Reduce Framework\n",
+      "\t\tMap input records=242308\n",
+      "\t\tMap output records=242308\n",
+      "\t\tMap output bytes=5033435\n",
+      "\t\tMap output materialized bytes=5518077\n",
+      "\t\tInput split bytes=492\n",
+      "\t\tCombine input records=0\n",
+      "\t\tCombine output records=0\n",
+      "\t\tReduce input groups=242308\n",
+      "\t\tReduce shuffle bytes=5518077\n",
+      "\t\tReduce input records=242308\n",
+      "\t\tReduce output records=22510\n",
+      "\t\tSpilled Records=484616\n",
+      "\t\tShuffled Maps =4\n",
+      "\t\tFailed Shuffles=0\n",
+      "\t\tMerged Map outputs=4\n",
+      "\t\tGC time elapsed (ms)=20302\n",
+      "\t\tCPU time spent (ms)=34000\n",
+      "\t\tPhysical memory (bytes) snapshot=760201216\n",
+      "\t\tVirtual memory (bytes) snapshot=9632579584\n",
+      "\t\tTotal committed heap usage (bytes)=515514368\n",
+      "\tShuffle Errors\n",
+      "\t\tBAD_ID=0\n",
+      "\t\tCONNECTION=0\n",
+      "\t\tIO_ERROR=0\n",
+      "\t\tWRONG_LENGTH=0\n",
+      "\t\tWRONG_MAP=0\n",
+      "\t\tWRONG_REDUCE=0\n",
+      "\tFile Input Format Counters \n",
+      "\t\tBytes Read=5033433\n",
+      "\tFile Output Format Counters \n",
+      "\t\tBytes Written=510822\n",
+      "18/07/21 19:35:42 INFO streaming.StreamJob: Output directory: anagram_result_1532201367396105\n"
      ]
     }
    ],
-   "source": [
-    "! hdfs dfs -ls /data/wiki"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
     "OUT_DIR=\"wc_result_\"$(date +\"%s%6N\")\n",
     "NUM_REDUCERS=4\n",
-    "OUT_DIR1=\"anagram_int_\"$(date +\"%s%6N\")\n",
     "OUT_DIR2=\"anagram_result_\"$(date +\"%s%6N\")\n",
     "\n",
     "hdfs dfs -rm -r -skipTrash ${OUT_DIR} > /dev/null\n",
-    "hdfs dfs -rm -r -skipTrash ${OUT_DIR1} > /dev/null\n",
     "hdfs dfs -rm -r -skipTrash ${OUT_DIR2} > /dev/null\n",
     "\n",
     "yarn jar /opt/cloudera/parcels/CDH/lib/hadoop-mapreduce/hadoop-streaming.jar \\\n",
     "    -D mapred.jab.name=\"Streaming wordCount\" \\\n",
     "    -D mapreduce.job.reduces=${NUM_REDUCERS} \\\n",
-    "    -D stream.num.map.output.key.fields=2 \\\n",
-    "    -D mapreduce.partition.keypartitioner.options=-k1,2 \\\n",
     "    -files mapper4.py,reducer4.py,/datasets/stop_words_en.txt \\\n",
     "    -mapper \"python mapper4.py\" \\\n",
     "    -reducer \"python reducer4.py\" \\\n",
-    "    -partitioner org.apache.hadoop.mapred.lib.KeyFieldBasedPartitioner \\\n",
     "    -input /data/wiki/en_articles_part \\\n",
     "    -output ${OUT_DIR} > /dev/null \n",
     "    \n",
-    "\n",
     "yarn jar /opt/cloudera/parcels/CDH/lib/hadoop-mapreduce/hadoop-streaming.jar \\\n",
     "    -D mapred.jab.name=\"Anagrams\" \\\n",
-    "    -D mapreduce.job.reduces=${NUM_REDICERS} \\\n",
+    "    -D mapreduce.job.reduces=1 \\\n",
+    "    -D mapreduce.partition.keypartitioner.options=-k1,1 \\\n",
     "    -files reducer4a.py \\\n",
     "    -mapper \"cat\" \\\n",
     "    -reducer \"python reducer4a.py\" \\\n",
+    "    -partitioner org.apache.hadoop.mapred.lib.KeyFieldBasedPartitioner \\\n",
     "    -input ${OUT_DIR}/part* \\\n",
-    "    -output ${OUT_DIR1} > /dev/null \n",
+    "    -output ${OUT_DIR2} > /dev/null\n",
     "\n",
-    "\n",
-    "yarn jar /opt/cloudera/parcels/CDH/lib/hadoop-mapreduce/hadoop-streaming.jar \\\n",
-    "    -D mapred.jab.name=\"Anagrams final\" \\\n",
-    "    -D mapreduce.job.reduces=1 \\\n",
-    "    -files mapper4b.py \\\n",
-    "    -mapper \"python mapper4b.py\" \\\n",
-    "    -input ${OUT_DIR1}/part* \\\n",
-    "    -reducer \"cat\" \\\n",
-    "    -output ${OUT_DIR2} > /dev/null \n",
-    "\n",
-    "hdfs dfs -cat ${OUT_DIR2}/part-00000 | grep \"english,\""
+    "hdfs dfs -cat ${OUT_DIR2}/part-00000 | grep \"english,\"\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
